corrections to faq cell locales: done in localeapp, pulled to local

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,4 +1,231 @@
 fr:
+  cells:
+    faq:
+      heading: 
+      section_1:
+        heading: 
+        question_1:
+          answer: 
+          link_1:
+            name: 
+            target: 
+            url: 
+            var: 
+          question: 
+        question_10:
+          answer: 
+          link_1:
+            name: 
+            target: 
+            url: 
+            var: 
+          question: 
+        question_11:
+          answer: 
+          link_1:
+            name: 
+            target: 
+            url: 
+            var: 
+          question: 
+        question_12:
+          answer: 
+          link_1:
+            name: 
+            target: 
+            url: 
+            var: 
+          question: 
+        question_13:
+          answer: 
+          link_1:
+            name: 
+            target: 
+            url: 
+            var: 
+          question: 
+        question_2:
+          answer: 
+          question: 
+        question_3:
+          answer: 
+          link_1:
+            class: 
+            name: 
+            url: 
+            var: 
+          question: 
+        question_4:
+          answer: 
+          question: 
+        question_5:
+          answer: 
+          question: 
+        question_6:
+          answer: 
+          question: 
+        question_7:
+          answer: 
+          question: 
+        question_8:
+          answer: 
+          link_1:
+            class: 
+            name: 
+            url: 
+            var: 
+          question: 
+        question_9:
+          answer: 
+          link_1:
+            name: 
+            target: 
+            url: 
+            var: 
+          link_2:
+            name: 
+            target: 
+            url: 
+            var: 
+          link_3:
+            name: 
+            target: 
+            url: 
+            var: 
+          question: 
+      section_2:
+        heading: 
+        question_1:
+          anchor: 
+          answer: 
+          question: 
+        question_10:
+          answer: 
+          link_1:
+            class: 
+            name: 
+            url: 
+            var: 
+          link_2:
+            name: 
+            target: 
+            url: 
+            var: 
+          question: 
+        question_11:
+          answer: 
+          question: 
+        question_12:
+          answer: 
+          question: 
+        question_2:
+          answer: 
+          question: 
+        question_3:
+          answer: 
+          question: 
+        question_4:
+          answer: 
+          question: 
+        question_5:
+          anchor: 
+          answer: 
+          question: 
+        question_6:
+          answer: 
+          question: 
+        question_7:
+          answer: 
+          question: 
+        question_8:
+          answer: 
+          question: 
+        question_9:
+          answer: 
+          link_1:
+            class: 
+            name: 
+            url: 
+            var: 
+          question: 
+      section_3:
+        heading: 
+        question_1:
+          answer: 
+          question: 
+        question_2:
+          answer: 
+          question: 
+        question_3:
+          answer: 
+          question: 
+        question_4:
+          answer: 
+          question: 
+        question_5:
+          answer: 
+          question: 
+        question_6:
+          answer: 
+          question: 
+      section_4:
+        heading: 
+        question_1:
+          anchor: 
+          answer: 
+          question: 
+        question_2:
+          answer: 
+          question: 
+        question_3:
+          answer: 
+          question: 
+      section_5:
+        heading: 
+        question_1:
+          answer: 
+          question: 
+        question_2:
+          answer: 
+          question: 
+        question_3:
+          answer: 
+          question: 
+        question_4:
+          answer: 
+          link_1:
+            name: 
+            target: 
+            url: 
+            var: 
+          question: 
+        question_5:
+          answer: 
+          question: 
+        question_6:
+          answer: 
+          question: 
+        question_7:
+          answer: 
+          link_1:
+            name: 
+            target: 
+            url: 
+            var: 
+          question: 
+        question_8:
+          answer: 
+          link_1:
+            class: 
+            name: 
+            url: 
+            var: 
+          link_2:
+            name: 
+            target: 
+            url: 
+            var: 
+          question: 
   conf:
     current_location: Mein Standort
     default_latlng: 52.520007,13.404954
@@ -29,7 +256,7 @@ fr:
         toggle_section_html:
           one: Dein <strong>clarat refugees</strong>-Angebot
           other: Deine <strong>%{count} clarat refugees</strong>-Angebote
-      obfuscated_email: deiner E-Mail-Adresse
+      obfuscated_email: deine E-Mail-Adresse
       refugees:
         heading: |
           Deine clarat refugees-Angebote für <span id="secure-email-0">%{email}</span>
@@ -229,7 +456,6 @@ fr:
       section:
         family: 
         refugees: 
-  heading: 
   js:
     ajax_error:
       error: Suchfehler
@@ -1132,230 +1358,6 @@ fr:
         street: Französische Straße 47
         telephone: Tel +49 (0)30 55 57 96 00
         zip_city: 10117 Berlin
-  section_1:
-    heading: 
-    question_1:
-      answer: 
-      link_1:
-        name: 
-        target: 
-        url: 
-        var: 
-      question: 
-    question_10:
-      answer: 
-      link_1:
-        name: 
-        target: 
-        url: 
-        var: 
-      question: 
-    question_11:
-      answer: 
-      link_1:
-        name: 
-        target: 
-        url: 
-        var: 
-      question: 
-    question_12:
-      answer: 
-      link_1:
-        name: 
-        target: 
-        url: 
-        var: 
-      question: 
-    question_13:
-      answer: 
-      link_1:
-        name: 
-        target: 
-        url: 
-        var: 
-      question: 
-    question_2:
-      answer: 
-      question: 
-    question_3:
-      answer: 
-      link_1:
-        class: 
-        name: 
-        url: 
-        var: 
-      question: 
-    question_4:
-      answer: 
-      question: 
-    question_5:
-      answer: 
-      question: 
-    question_6:
-      answer: 
-      question: 
-    question_7:
-      answer: 
-      question: 
-    question_8:
-      answer: 
-      link_1:
-        class: 
-        name: 
-        url: 
-        var: 
-      question: 
-    question_9:
-      answer: 
-      link_1:
-        name: 
-        target: 
-        url: 
-        var: 
-      link_2:
-        name: 
-        target: 
-        url: 
-        var: 
-      link_3:
-        name: 
-        target: 
-        url: 
-        var: 
-      question: 
-  section_2:
-    heading: 
-    question_1:
-      anchor: 
-      answer: 
-      question: 
-    question_10:
-      answer: 
-      link_1:
-        class: 
-        name: 
-        url: 
-        var: 
-      link_2:
-        name: 
-        target: 
-        url: 
-        var: 
-      question: 
-    question_11:
-      answer: 
-      question: 
-    question_12:
-      answer: 
-      question: 
-    question_2:
-      answer: 
-      question: 
-    question_3:
-      answer: 
-      question: 
-    question_4:
-      answer: 
-      question: 
-    question_5:
-      anchor: 
-      answer: 
-      question: 
-    question_6:
-      answer: 
-      question: 
-    question_7:
-      answer: 
-      question: 
-    question_8:
-      answer: 
-      question: 
-    question_9:
-      answer: 
-      link_1:
-        class: 
-        name: 
-        url: 
-        var: 
-      question: 
-  section_3:
-    heading: 
-    question_1:
-      answer: 
-      question: 
-    question_2:
-      answer: 
-      question: 
-    question_3:
-      answer: 
-      question: 
-    question_4:
-      answer: 
-      question: 
-    question_5:
-      answer: 
-      question: 
-    question_6:
-      answer: 
-      question: 
-  section_4:
-    heading: 
-    question_1:
-      anchor: 
-      answer: 
-      question: 
-    question_2:
-      answer: 
-      question: 
-    question_3:
-      answer: 
-      question: 
-  section_5:
-    heading: 
-    question_1:
-      answer: 
-      question: 
-    question_2:
-      answer: 
-      question: 
-    question_3:
-      answer: 
-      question: 
-    question_4:
-      answer: 
-      link_1:
-        name: 
-        target: 
-        url: 
-        var: 
-      question: 
-    question_5:
-      answer: 
-      question: 
-    question_6:
-      answer: 
-      question: 
-    question_7:
-      answer: 
-      link_1:
-        name: 
-        target: 
-        url: 
-        var: 
-      question: 
-    question_8:
-      answer: 
-      link_1:
-        class: 
-        name: 
-        url: 
-        var: 
-      link_2:
-        name: 
-        target: 
-        url: 
-        var: 
-      question: 
   shareds:
     forms:
       fill_field: Bitte fülle dieses Feld aus
