--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -435,6 +435,11 @@ tr:
       section:
         family: 
         refugees: 
+  formtastic:
+    hints:
+      update_request:
+        index:
+          email: 
   js:
     ajax_error:
       error: Arama hatası
@@ -1313,12 +1318,42 @@ tr:
         Bu gibi durumlarda Almanca metne bakman daha doğru olacaktır.
   simple_form:
     hints:
+      contact:
+        new:
+          email: 
+          message: 
+          name: 
       search_form:
+        about:
+          query: 
+          search_location: 
         faq:
           query: 
           search_location: 
+        home:
+          query: 
+          search_location: 
+        index:
+          query: 
+          search_location: 
+        new:
+          query: 
+          search_location: 
+        not_found:
+          query: 
+          search_location: 
       subscription:
+        about:
+          email: 
         faq:
+          email: 
+        home:
+          email: 
+        index:
+          email: 
+        new:
+          email: 
+        not_found:
           email: 
     required:
       html: 
