--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -586,14 +586,14 @@ de:
       section_5:
         heading: Hast du Fragen als Mitarbeiter einer Organisation?
         question_1:
-          answer: |
+          answer: |-
             Die Angebote deiner Organisation helfen Kindern, Jugendlichen oder
             Familien, die Probleme haben. Darum haben wir sie bei <b>clarat
             family</b> aufgenommen. Denn wir wollen, dass die, die Hilfe brauchen,
             schnell und unkompliziert Hilfe bei deiner Organisation finden.
             <br>
             Oder die Angebote deiner Organisation helfen Flüchtlingen, die nach
-            Deutschland geflüchtet sind. Deshalb haben wir sie bei <br>clarat
+            Deutschland geflüchtet sind. Deshalb haben wir sie bei <b>clarat
             refugees</b> aufgenommen. Denn wir wollen den Flüchtlingen schnell und
             unkompliziert zeigen, wo sie Hilfe finden.
           question: Warum sind die Angebote meiner Organisation bei clarat?
@@ -641,14 +641,15 @@ de:
             die ganz genau zu ihm passt.
           question: Warum werden aus einem Unterstützungsangebot von meiner Organisation mehrere Angebote bei clarat?
         question_6:
-          answer: |
+          answer: |-
             Es gibt viele Unterstützungsangebote für Kinder, Jugendliche, Familien
             und Flüchtlinge in Deutschland. Und clarat wird Stück für Stück
             aufgebaut. Es kann also sein, dass wir noch nicht alle Angebote deiner
             Organisation aufnehmen konnten. Oder wir haben vorerst entschieden, dass
             nicht alle Angebote deiner Organisation bei clarat aufgenommen werden
-            können. Du findest bei <b>clarat family</b> vorerst:
+            können.
             <p>
+            Du findest bei <b>clarat family</b> vorerst:
             <ul>
             <li>
             nur Angebote, die Menschen mit Problemen helfen
@@ -951,6 +952,11 @@ de:
       section:
         family: Family
         refugees: Refugees
+  formtastic:
+    hints:
+      update_request:
+        index:
+          email: 
   js:
     ajax_error:
       error: Suchfehler
@@ -1897,12 +1903,42 @@ de:
         klingt. Schau dann lieber noch einmal in den deutschen Text.
   simple_form:
     hints:
+      contact:
+        new:
+          email: 
+          message: 
+          name: 
       search_form:
+        about:
+          query: 
+          search_location: 
         faq:
           query: 
           search_location: 
+        home:
+          query: 
+          search_location: 
+        index:
+          query: 
+          search_location: 
+        new:
+          query: 
+          search_location: 
+        not_found:
+          query: 
+          search_location: 
       subscription:
+        about:
+          email: 
         faq:
+          email: 
+        home:
+          email: 
+        index:
+          email: 
+        new:
+          email: 
+        not_found:
           email: 
     required:
       html: <abbr title="required">*</abbr>
