--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -436,6 +436,11 @@ pl:
       section:
         family: 
         refugees: 
+  formtastic:
+    hints:
+      update_request:
+        index:
+          email: 
   js:
     ajax_error:
       error: Suchfehler
@@ -1366,12 +1371,42 @@ pl:
         klingt. Schau dann lieber noch einmal in den deutschen Text.
   simple_form:
     hints:
+      contact:
+        new:
+          email: 
+          message: 
+          name: 
       search_form:
+        about:
+          query: 
+          search_location: 
         faq:
           query: 
           search_location: 
+        home:
+          query: 
+          search_location: 
+        index:
+          query: 
+          search_location: 
+        new:
+          query: 
+          search_location: 
+        not_found:
+          query: 
+          search_location: 
       subscription:
+        about:
+          email: 
         faq:
+          email: 
+        home:
+          email: 
+        index:
+          email: 
+        new:
+          email: 
+        not_found:
           email: 
     required:
       html: 
