tr & ru route locale changes (from email)

--- a/config/locales/gems/routes/tr.yml
+++ b/config/locales/gems/routes/tr.yml
@@ -1,6 +1,6 @@
 tr:
   routes:
-    offers: "Hizmetlerimiz"
+    offers: "hizmetlerimiz"
     users: "kullanıcılar"
     contacts: "iletişim"
     organizations: "organizasyonlar"
