localeapp changes: imported ru and tr (email-sent) yaml files

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -534,6 +534,7 @@ fr:
         email: E-Mail
         forum: Forum
         hotline: Telefon
+        list: 
         online-course: Online-Kurs
         personal: Persönlich
         portal: Adressliste
@@ -1005,6 +1006,181 @@ fr:
         </p>
       title: Rechtliche Hinweise
     faq:
+      heading: 
+      section_four:
+        answer_eight: 
+        answer_eight_bullet_one: 
+        answer_eight_bullet_two: 
+        answer_five: 
+        answer_four: 
+        answer_one: 
+        answer_one_bullet_five: 
+        answer_one_bullet_four: 
+        answer_one_bullet_one: 
+        answer_one_bullet_six: 
+        answer_one_bullet_three: 
+        answer_one_bullet_two: 
+        answer_seven: 
+        answer_six: 
+        answer_six_bullet_five: 
+        answer_six_bullet_four: 
+        answer_six_bullet_one: 
+        answer_six_bullet_six: 
+        answer_six_bullet_three: 
+        answer_six_bullet_two: 
+        answer_three: 
+        answer_two: 
+        heading: 
+        question_eight: 
+        question_five: 
+        question_four: 
+        question_one: 
+        question_seven: 
+        question_six: 
+        question_three: 
+        question_two: 
+      section_one:
+        answer_eight: 
+        answer_eighteen: 
+        answer_eleven: 
+        answer_fifteen: 
+        answer_five: 
+        answer_four: 
+        answer_fourteen: 
+        answer_nine: 
+        answer_nineteen: 
+        answer_one: 
+        answer_seven: 
+        answer_seventeen: 
+        answer_six: 
+        answer_sixteen: 
+        answer_ten: 
+        answer_thirteen: 
+        answer_three: 
+        answer_twelve: 
+        answer_two: 
+        heading: 
+        question_eight: 
+        question_eighteen: 
+        question_eleven: 
+        question_fifteen: 
+        question_five: 
+        question_four: 
+        question_fourteen: 
+        question_nine: 
+        question_nineteen: 
+        question_one: 
+        question_seven: 
+        question_seventeen: 
+        question_six: 
+        question_sixteen: 
+        question_ten: 
+        question_thirteen: 
+        question_three: 
+        question_twelve: 
+        question_two: 
+      section_three:
+        answer_eight: 
+        answer_five: 
+        answer_four: 
+        answer_nine: 
+        answer_one: 
+        answer_seven: 
+        answer_six: 
+        answer_three: 
+        answer_two: 
+        heading: 
+        question_eight: 
+        question_five: 
+        question_four: 
+        question_nine: 
+        question_one: 
+        question_seven: 
+        question_six: 
+        question_three: 
+        question_two: 
+      section_two:
+        answer_eight_bullet_one: 
+        answer_eight_bullet_three: 
+        answer_eight_bullet_two: 
+        answer_eight_first_part: 
+        answer_eight_second_part: 
+        answer_eleven: 
+        answer_fifteen: 
+        answer_five: 
+        answer_four_bullet_one: 
+        answer_four_bullet_two: 
+        answer_four_first_part: 
+        answer_four_second_part: 
+        answer_fourteen_bullet_one: 
+        answer_fourteen_bullet_three: 
+        answer_fourteen_bullet_two: 
+        answer_fourteen_first_part: 
+        answer_fourteen_second_part: 
+        answer_nine_bullet_five: 
+        answer_nine_bullet_four: 
+        answer_nine_bullet_one: 
+        answer_nine_bullet_three: 
+        answer_nine_bullet_two: 
+        answer_nine_first_part: 
+        answer_nine_second_part: 
+        answer_one: 
+        answer_seven_bullet_five: 
+        answer_seven_bullet_four: 
+        answer_seven_bullet_one: 
+        answer_seven_bullet_six: 
+        answer_seven_bullet_three: 
+        answer_seven_bullet_two: 
+        answer_seven_first_part: 
+        answer_seven_second_part: 
+        answer_six_bullet_five: 
+        answer_six_bullet_four: 
+        answer_six_bullet_one: 
+        answer_six_bullet_seven: 
+        answer_six_bullet_six: 
+        answer_six_bullet_three: 
+        answer_six_bullet_two: 
+        answer_six_first_part: 
+        answer_six_second_part: 
+        answer_sixteen_first_part: 
+        answer_sixteen_second_part: 
+        answer_ten: 
+        answer_thirteen: 
+        answer_three_bullet_one: 
+        answer_three_bullet_three: 
+        answer_three_bullet_two: 
+        answer_three_first_part: 
+        answer_three_second_part: 
+        answer_twelve_bullet_one: 
+        answer_twelve_bullet_three: 
+        answer_twelve_bullet_two: 
+        answer_twelve_first_part: 
+        answer_twelve_second_part: 
+        answer_two_bullet_five: 
+        answer_two_bullet_four: 
+        answer_two_bullet_one: 
+        answer_two_bullet_six: 
+        answer_two_bullet_three: 
+        answer_two_bullet_two: 
+        answer_two_first_part: 
+        answer_two_second_part: 
+        heading: 
+        question_eight: 
+        question_eleven: 
+        question_fifteen: 
+        question_five: 
+        question_four: 
+        question_fourteen: 
+        question_nine: 
+        question_one: 
+        question_seven: 
+        question_six: 
+        question_sixteen: 
+        question_ten: 
+        question_thirteen: 
+        question_three: 
+        question_twelve: 
+        question_two: 
       title: Häufige Fragen
     home:
       how:
@@ -1363,19 +1539,6 @@ fr:
         street: Französische Straße 47
         telephone: Tel +49 (0)30 55 57 96 00
         zip_city: 10117 Berlin
-  routes:
-    '404': 
-    datenschutzhinweise: 
-    definitions: 
-    emails: 
-    new: 
-    preview: 
-    rechtliche-hinweise: 
-    search_locations: 
-    subscribe: 
-    subscriptions: 
-    unsubscribe: 
-    update_requests: 
   shareds:
     forms:
       fill_field: Bitte fülle dieses Feld aus
