fixed dynamic faq generation (and received new translations)

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1,94 +1,106 @@
 ar:
   cells:
     faq:
-      heading: 
+      heading: "أسئلة شائعة"
       section_1:
-        heading: 
+        heading: "من؛  كيف؛ ماذا؟"
         question_1:
-          answer: 
+          answer: |-
+            كلارات هي بوابة إليكترونية  والتي عن طريقها يمكن للمرء أن يجد عروض للمساعدة والدعم. فنحن نساعدك في العثور على مساعدة؛ ولكننا لا نقدم المشورة؛ لأن لها خبراء ونحن ندلك عليهم فقط. هنا يوجد <b>كلارات الأسرة<b> و <b>كلارات اللاجئين<b>
+            <p>
+            <ul>
+            <li>
+            <b>كلارات الأسرة<b> تساعد الأطفال والشبان والأسر، الذين لديهم مشاكل ويبحثون عن مساعدة بالقرب منهم. فهنا تجد بسهولة مساعدة لك شخصيا أو لأسرتك أو لأصدقائك. وأيضاً لمن تعرف من الأطفال الآخرين  والشبان والأسر. يمكنك مشاهدة ما تقوم به كلارات الأسرة في هذا الفيلم %{link_to_family_movie}
+            </li>
+            <li>
+            <b>كلارات اللاجئين</b> تساعد اللاجئين، الذين يبحثون عن دعم بالقرب منهم. هنا يمكنك بسهولة أن تجد مساعدة على لك شخصيا ولأسرتك وأصدقائك. حتى وإن لك تكن أنت من اللاجئين ولكنك تعرف لاجئين في حاجة لمساعدة.
+            </li>
+            </ul>
+            </p>
           link_1:
-            name: 
+            name: "فيلم"
             target: 
-            url: 
-            var: 
-          question: 
+            url: http://blog.clarat.org/العثور على مساعدة بسهولة-مشروعنا-كلارات-في-فيلم قصير/
+            var: "رابط _ل_الأسرة_فيلم"
+          question: "ما هي كلارات؟"
         question_10:
-          answer: 
+          answer: "تمويل <b>كلارات الأسرة<b> و<b>كلارات للاجئين<b> يأتي من %{link_to_bsz}."
           link_1:
-            name: 
-            target: 
+            name: "مؤسسة بتكيزير المستقبل"
+            target: blank_
             url: 
-            var: 
-          question: 
+            var: link_to_bsz
+          question: "من يمول كلارات؟"
         question_11:
-          answer: 
+          answer: |
+            <b>كلارات الأسرة<b> و <b>كلارات اللاجئين<b> سوف تستمر لوقت طويل، حيث أن  %{link_to_bsz}  سوف تستمر بتمويل هاتين البوابتين الإليكترونيتين أيضا في المستقبل. فيمكنك هنا أيضا على مدار السنوات القادمة ان تجد مساعدة. وهذا يسري بشكل خاص على برلين وقريبا لمدن ومقاطعات أخرى في ألمانيا؛ التي سوف يتم إدراجها لاحقا في كلارات.
           link_1:
-            name: 
-            target: 
-            url: 
-            var: 
-          question: 
+            name: "مؤسسة بنكيزير المستقبل"
+            target: blank_
+            url: http://www.benckiser-stiftung.org/de
+            var: link_to_bsz
+          question: "إلى متى ستستمر كلارات؟"
         question_12:
-          answer: 
+          answer: "رمز البرمجة الخاص بكلارات متاح للجمهور. الرابط لهذا الرمز تجده هنا %{link_to_github}."
           link_1:
-            name: 
-            target: 
-            url: 
-            var: 
-          question: 
+            name: "هنا"
+            target: blank_
+            url: https://github.com/clarat-org
+            var: link_to_github
+          question: "هل رمز البرمجة الخاض بكلارات متاح للجمهور؟"
         question_13:
-          answer: 
+          answer: "في الوقت الحالي لا توجد أي وصلة يمكنك من خلالها تنزيل البيانات أو إعادة العمل عليها. ربما يكون من المحتمل أنه توجد لاحقا مثل هذه الوصلة، ولكن هذا غير مؤكد. نحن الآن نقوم بتجميع وتصنيف البيانات بشكل أساسي. إذا كنت مهتما بمثل هذه الوصلات%{link_to_contact_form}."
           link_1:
-            name: 
-            target: 
+            name: "يمكنك الإتصال بنا بسهولة."
+            target: blank_
             url: 
-            var: 
-          question: 
+            var: link_to_contact_form
+          question: "هل تقدم كلارات وصلة يمكن من خلالها إعادة إستخدام المعلومات؟"
         question_2:
-          answer: 
-          question: 
+          answer: "يوجد في ألمانيا العديد من عروض الدعم التي تقدم للناس الذين في إحتياج عاجل لمساعدة. ولكن في الغالب يكون من الصعب العثورعلى هذه العروض, على سبيل المثال إذا كان الفرد لا يعرف بالتحديد أين يجب أن يبحث بعد ذلك أو إذا كان لا يعرف بمن عليه أن يتصل. ونحن نريد ان نغير هذا الوضع."
+          question: "لماذا توجد كلارات؟"
         question_3:
-          answer: 
+          answer: "أدخل المشكلة الخاصة بك أو المكان الذي تريد أن تبحث عن مساعدة فيه. فستجد عروض الدعم المناسبة التي بالقرب منك. أو ستجد مساعدة عن طريق التليفون أوفي  الإنترنت. %{ref_to_how_to_find_right_help} وهنا نوضح نحن لك بالضبط، كيف تجد ما تبحث عنه. فعندما تقوم بالنقر على أحد العروض فإننا نقول لك ما يجب عليك أن تفعل بعد ذلك. على سبيل المثال إذا كان عليك الإتصال أو الذهاب إلى مكان ما."
           link_1:
             class: 
-            name: 
+            name: "هنا"
             url: 
             var: 
-          question: 
+          question: "كيف تعمل كلارات؟"
         question_4:
-          answer: 
-          question: 
+          answer: "كلارات مجانية وستظل مجانية. فأي شخص يمكنه أن يبحث في <b>كلارات الأسرة<b> عن مساعدة للأطفال والشباب والأسر. وأي شخص يمكنه أن يبحث في <b>كلارات اللاجئين<b> عن مساعدة للاجئين."
+          question: "هل البحث في كلارات مجاني؟"
         question_5:
-          answer: 
-          question: 
+          answer: "البحث في كلارات دائما مجهول. وهذا يعني أنه لن يعرف أحد اسمك او عنوانك."
+          question: "هل البحث في كلارات مجهول؟"
         question_6:
-          answer: 
-          question: 
+          answer: "نحن ننظر بشكل دائم إذا ما كانت المعلومات في كلارات لاتزال معاصرة. لأنه بهذه الطريقة  فقط يمكننا مساعدة الأطفال والشباب والأسر واللاجئين. فإذا لم تكن المعلومات لاتزال صحيحة فإنه يتم  تحديثها أي أننا نستبدلها. "
+          question: "هل المعلومات في كلارات حديثة؟"
         question_7:
-          answer: 
-          question: 
+          answer: "بعض العروض في <b>كلارات الأسرة<b> و<b>كلارات اللاجئين<b> يمكن الأستفادة منها من  كل الأنحاء؛ سواء كنت تسكن في أي مكان ستجد العديد من العروض والتي من خلالها يساعدك شخص عن طريق التليفون او الإنترنت؛ أي عن طريق الشات أو المنتديات. ولكن العديد من العروض يمكنك الإستفادة منها فقط حيت تسكن. في <b>كلارات اللاجئين<b> تجد عروضا في كل ألمانيا. اما في <b>كلارات الأسرة<b> فقد بدأنا ببرلين؛ هنا توجد بالفعل عروض كثيرة. ولكننا نجمع عروضا أكثر وقريبا سيكون لمدن كبرى أخرى في ألمانيا. "
+          question: "هل توجد كلارات لألمانيا كلها؟"
         question_8:
-          answer: 
+          answer: "كلارات تعرض لك المساعدة المتاحة بالقرب منك. فإنك تجد كل العروض مجمعة وبشكل عام. علاوة على ذلك فنحن نقول لك ما يجب عليك أن تفعل بالضبط لكي تحصل على المساعدة. ونحن نكتب دائما بلغة سهلة ويمكن للجميع ان يفهمها. حتى يتمكن الناس الذين لا يجيدون الألمانية من العثور على المساعدة؛ كما يمكنك أيضا أن تقرأ العروض بلغات أخرى عديدة. إذا أردت أن تعرف أكثر عن هذه اللغات؛ إضغط هنا %{ref_to_how_many_languages}."
           link_1:
             class: 
             name: 
             url: 
             var: 
-          question: 
+          question: "ما هو المميز في كلارات؟"
         question_9:
-          answer: 
+          answer: "كلارات إحدي مشاريع مؤسسة بنكيزير للمستقبل%{link_to_bsz}. وهي مجموعة مؤسسات والتي تقوم منذ وقت طويل بأعمال من أجل الأطفال والشباب. والآن للاجئين من خلال كلارات للاجئين. هنا يمكنك مشاهدة هذا الفيلم التسجيلي لمعرفة الكثير عن المؤسسة %{link_to_bsz_movie}. فكرة كلارات جاءت في منتصف عام 2014. وفريق عمل كلارات تكون منذ سبتمبر 2014. إذا أردت معرفة الكثير عن فريق العمل انقر هنا %{link_to_about_us}."
           link_1:
-            name: 
+            name: "مؤسسة بنكيزير المستقبل"
             target: 
             url: 
             var: 
           link_2:
-            name: 
-            target: 
-            url: 
-            var: 
+            name: "فيديو"
+            target: blank_
+            url: http://www.benckiser-stiftung.org/blog/uebersicht-unserer-gegenwaertigen-projekte-im-kurzfilm
+            var: link_to_bsz_movie
           link_3:
-            name: 
+            name: "هنا"
             target: 
             url: 
             var: 
